--- a/src/pages/Popup/Popup.css
+++ b/src/pages/Popup/Popup.css
@@ -1,6 +1,6 @@
 .App {
-  /* width: 360px; */
-  /* height: 600px; */
+  width: 100%;
+  height: 600px;
   background-color: #f7fafc;
   display: flex;
   flex-direction: column;
